freepops (0.2.7-1) unstable; urgency=low

  * new upstream release

 -- Enrico Tassi <gareuselesinge@debian.org>  Tue, 27 May 2008 16:27:52 +0200

freepops (0.2.6-1) unstable; urgency=low

  * New upstream release
  * Added pt_BR localization (thanks Eder L. Marques) (Closes: #447877)

 -- Enrico Tassi <gareuselesinge@debian.org>  Thu, 25 Oct 2007 17:49:24 +0200

freepops (0.2.5-1) unstable; urgency=low

  * New upstream release
  * Added ml.po (Closes: #426113)
  * Updated vi.po (Closes: #427176) 

 -- Enrico Tassi <gareuselesinge@debian.org>  Fri, 22 Jun 2007 13:39:47 +0200

freepops (0.2.4-1) unstable; urgency=low

  * New upstream release 
  * Debconf templates and debian/control reviewed by the debian-l10n-
    english team as part of the Smith review project. 
    Closes: #420761, #421733
  * Debconf translation updates:
    - German. Closes: #421732
    - Portuguese. Closes: #421738
    - Tamil. Closes: #421777
    - Czech. Closes: #421765
    - Galician. Closes: #421817
    - Basque. Closes: #421883
    - Russian. Closes: #422112
    - Swedish. Closes: #422474
    - Dutch. Closes: #423056, #419728
    - Spanish. Closes: #423693
    - Arabic. Closes: #424698
    - French. Closes: #424751

 -- Enrico Tassi <gareuselesinge@debian.org>  Sat, 26 May 2007 12:01:32 +0200

freepops (0.2.3-1) unstable; urgency=low

  * New Upstream release 
  * Changed default options, now the daemon lowers its rights to
    nobody.nogroup (Closes: #413412)
  * Integrated l10n sv,ru,eu,gl,cs,pt,de,nl,ta patches but bugs are still 
    open due to the debconf template review.

 -- Enrico Tassi <gareuselesinge@debian.org>  Sat, 07 Apr 2007 16:40:26 +0200

freepops (0.2.3-1~l10n-1) UNRELEASED; urgency=low

  * Integrated l10n sv patch (Closes: #422474)
  * Integrated l10n ru patch (Closes: #422112)
  * Integrated l10n eu patch (Closes: #421883)
  * Integrated l10n gl patch (Closes: #421817)
  * Integrated l10n cs patch (Closes: #421765)
  * Integrated l10n pt patch (Closes: #421738)