@@ -1,4 +1,2 @@
-usr/lib/freepops
 usr/share/man/man1
 usr/bin
-usr/share/pixmaps
