@@ -59,10 +59,12 @@ install-common:
 		$(CURDIR)/debian/freepops-updater-fltk/usr/lib/freepops/
 	mv $(CURDIR)/debian/freepops/usr/share/man/man1/freepops-updater-fltk.1\
 		$(CURDIR)/debian/freepops-updater-fltk/usr/share/man/man1/
+	mv $(CURDIR)/debian/freepops/usr/share/man/man1/freepops-updater-zenity.1\
+		$(CURDIR)/debian/freepops-updater-gnome/usr/share/man/man1/
 	mv $(CURDIR)/debian/freepops/usr/bin/freepops-updater-fltk \
 		$(CURDIR)/debian/freepops-updater-fltk/usr/bin
 	mv $(CURDIR)/debian/freepops/usr/bin/freepops-updater-zenity \
-		$(CURDIR)/debian/freepops-updater-zenity/usr/bin
+		$(CURDIR)/debian/freepops-updater-gnome/usr/bin
 	cp  updater-ui/fltk/freepops-updater-fltk-32.xpm \
 		$(CURDIR)/debian/freepops-updater-fltk/usr/share/pixmaps/
 
