@@ -1,0 +1,31 @@
+.\"                                      Hey, EMACS: -*- nroff -*-
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.TH FREEPOPS-UPDATER-DIALOG 1 "January 12, 2007"
+.\" Please adjust this date whenever revising the manpage.
+.\"
+.\" Some roff macros, for reference:
+.\" .nh        disable hyphenation
+.\" .hy        enable hyphenation
+.\" .ad l      left justify
+.\" .ad b      justify to both left and right margins
+.\" .nf        disable filling
+.\" .fi        enable filling
+.\" .br        insert line break
+.\" .sp <n>    insert n+1 empty lines
+.\" for manpage-specific macros, see man(7)
+.SH NAME
+freepops-updater-dialog \- FreePOPs updater
+.SH SYNOPSIS
+.B freepops-updater-dialog
+.br
+.SH DESCRIPTION
+Interactive frontend to the freepops updater modules, that allows to check the official website for updates to lua modules and install them.
+.SH FILES
+.TP
+.I /var/lib/freepops/lua_updates/*
+Installation root for all updates
+.SH AUTHOR
+This manual page was written by Enrico Tassi <gareuselesinge@users.sourceforge.net>,
+for the Debian project (but may be used by others).
